--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,13 +10,13 @@
 
 /* Estilos gerais */
 body {
-  background-color: #f2f2f2; 
+  @apply bg-gradient-to-r from-gray-50 to-gray-100;
   color: #000; 
-  font-family: Arial, sans-serif; 
+  font-family: 'Nunito Sans', sans-serif;
   line-height: 1.6; 
   margin: 0;
   padding: 0;
-  min-height: 100vh; 
+  max-height: 100vh; 
 }
 
 img {
@@ -24,4 +24,3 @@ img {
   max-width: 100%; 
   height: auto; 
 }
-
